--- a/gccsite/gcc/templates/gcc/privacy.html
+++ b/gccsite/gcc/templates/gcc/privacy.html
@@ -17,6 +17,7 @@
 <h4>Purposes</h4>
 <p>The processing goal is to <strong>organize the Girls Can Code! (GCC!) summer camps</strong>.<br>
 It enables the Prologin association to:
+</p>
 	<ul>
 		<li>handle the applications;</li>
 		<li>grant or no a financial grant;</li>
@@ -25,7 +26,6 @@ It enables the Prologin association to:
 		<li>answer questions from the participants;</li>
 		<li>steer the summer camps (evaluate participant satisfaction, produce statistics).</li>
 	</ul>
-</p>
 
 <h4>Lawfulness of Processing</h4>
 <p>The data subjects give consent to the processing of their personal data for the declared purposes (art. 6(1)a of GDPR).</p>
@@ -59,14 +59,13 @@ It enables the Prologin association to:
 <h3>Data Subjects</h3>
 </button>
 <div class="collapse" id="data_subjects">
-<p>This processing involves:
-	<ul>
-		<li>natural persons applying to a GCC! summer camp;</li>
-		<li>holder of parental authorities for the above persons if necessary (applicant is less than 16);</li>
-		<li>members of Prologin in charge of the summer camps;</li>
-		<li>natural or legal persons from Prologin partners and/or sub-processors.</li>
-	</ul>
-</p>
+<p>This processing involves:</p>
+<ul>
+  <li>natural persons applying to a GCC! summer camp;</li>
+  <li>holder of parental authorities for the above persons if necessary (applicant is less than 16);</li>
+  <li>members of Prologin in charge of the summer camps;</li>
+  <li>natural or legal persons from Prologin partners and/or sub-processors.</li>
+</ul>
 </div>
 
 <button class="btn btn-default btn-block" type="button" data-toggle="collapse" data-target="#data_recipients" aria-expanded="false" aria-controls="data_recipients">
@@ -74,14 +73,13 @@ It enables the Prologin association to:
 </button>
 <div class="collapse" id="data_recipients">
 <h4>Categories of Recipients</h4>
-<p>Taking into account their respective needs, the following are recipient of all or any parts of the data:
-	<ul>
-		<li>authorized members of Prologin;</li>
-		<li>authorized members of Prologin partners and/or sub-contractors;</li>
-		<li>other participants of the same summer camp;</li>
-		<li>emergency services if needed.</li>
-	</ul>
-</p>
+<p>Taking into account their respective needs, the following are recipient of all or any parts of the data:</p>
+<ul>
+  <li>authorized members of Prologin;</li>
+  <li>authorized members of Prologin partners and/or sub-contractors;</li>
+  <li>other participants of the same summer camp;</li>
+  <li>emergency services if needed.</li>
+</ul>
 
 <h4>Data Transfers Outside of EU</h4>
 <p>There is no transfer to any country outside of the EU.</p>
