--- a/gccsite/gcc/templates/gcc/main-footer.html
+++ b/gccsite/gcc/templates/gcc/main-footer.html
@@ -15,13 +15,13 @@
   </div>
   <div class="col-md-4">
     {# social shit #}
-    <a href="https://www.facebook.com/stagegirlscancode" title="{% trans "Girls Can Code! on Facebook" %}" class="social">
+    <a href="https://www.facebook.com/stagegirlscancode" title="{% trans 'Girls Can Code! on Facebook' %}" class="social">
       <span class="fa-stack fa-lg">
         <i class="fa fa-square-o fa-stack-2x fa-inverse"></i>
         <i class="fa fa-facebook fa-stack-1x fa-inverse"></i>
       </span>
     </a>
-    <a href="https://www.twitter.com/prologin" title="{% trans "Prologin on Twitter" %}" class="social">
+    <a href="https://www.twitter.com/prologin" title="{% trans 'Prologin on Twitter' %}" class="social">
       <span class="fa-stack fa-lg">
         <i class="fa fa-square-o fa-stack-2x fa-inverse"></i>
         <i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
@@ -38,8 +38,7 @@
         {% get_available_languages as LANGUAGES %}
         {% get_language_info_list for LANGUAGES as languages %}
         {% for language in languages %}
-          <option value="{{ language.code }}"{% if language.code == LANGUAGE_CODE %}
-              selected="selected"{% endif %}>{{ language.name_local.title }}</option>
+          <option value="{{ language.code }}" selected="{% if language.code == LANGUAGE_CODE %}selected{% endif %}">{{ language.name_local.title }}</option>
         {% endfor %}
       </select>
       <noscript><input type="submit" class="btn btn-default" value="{% trans "Apply" %}"/></noscript>
