--- a/gccsite/news/templates/zinnia/entry_archive_month.html
+++ b/gccsite/news/templates/zinnia/entry_archive_month.html
@@ -17,7 +17,7 @@
 <ul class="pager align-left">
   {% for date in date_list %}
   <li>
-    <a href="{% url 'zinnia:entry_archive_day' date|date:"Y" date|date:"m" date|date:"d" %}" rel="archives">{{ date|date:"DATE_FORMAT" }}</a>
+    <a href="{% url 'zinnia:entry_archive_day' date|date:'Y' date|date:'m' date|date:'d' %}" rel="archives">{{ date|date:"DATE_FORMAT" }}</a>
   </li>
   {% endfor %}
 </ul>
@@ -26,12 +26,12 @@
 <ul class="pager">
   {% if previous_month %}
   <li class="previous">
-    <a href="{% url 'zinnia:entry_archive_month' previous_month|date:"Y" previous_month|date:"m" %}" rel="archives">&laquo; {% trans "Previous month" %} {{ previous_month|date:"YEAR_MONTH_FORMAT" }}</a>
+    <a href="{% url 'zinnia:entry_archive_month' previous_month|date:'Y' previous_month|date:'m' %}" rel="archives">&laquo; {% trans "Previous month" %} {{ previous_month|date:"YEAR_MONTH_FORMAT" }}</a>
   </li>
   {% endif %}
   {% if next_month %}
   <li class="next">
-    <a href="{% url 'zinnia:entry_archive_month' next_month|date:"Y" next_month|date:"m" %}" rel="archives">{% trans "Next month" %} {{ next_month|date:"YEAR_MONTH_FORMAT" }} &raquo;</a>
+    <a href="{% url 'zinnia:entry_archive_month' next_month|date:'Y' next_month|date:'m' %}" rel="archives">{% trans "Next month" %} {{ next_month|date:"YEAR_MONTH_FORMAT" }} &raquo;</a>
   </li>
   {% endif %}
 </ul>
@@ -39,7 +39,7 @@
 <h3>{% trans "Archives" %}</h3>
 <ul class="pager align-left">
   <li>
-    <a href="{% url 'zinnia:entry_archive_year' month|date:"Y" %}" rel="archives">{{ month|date:"Y" }}</a>
+    <a href="{% url 'zinnia:entry_archive_year' month|date:'Y' %}" rel="archives">{{ month|date:"Y" }}</a>
   </li>
 </ul>
 {% endblock content-related %}
