--- a/gccsite/news/templates/zinnia/entry_archive_week.html
+++ b/gccsite/news/templates/zinnia/entry_archive_week.html
@@ -19,7 +19,7 @@
 <ul class="pager align-left">
   {% for date in date_list %}
   <li>
-    <a href="{% url 'zinnia:entry_archive_day' date|date:"Y" date|date:"m" date|date:"d" %}" rel="archives">{{ date|date:"DATE_FORMAT" }}</a>
+    <a href="{% url 'zinnia:entry_archive_day' date|date:'Y' date|date:'m' date|date:'d' %}" rel="archives">{{ date|date:"DATE_FORMAT" }}</a>
   </li>
   {% endfor %}
 </ul>
@@ -27,14 +27,14 @@
 <ul class="pager">
   {% if previous_week %}
   <li class="previous">
-    <a href="{% url 'zinnia:entry_archive_week' previous_week|date:"Y" previous_week|week_number %}" rel="archives">&laquo;
+    <a href="{% url 'zinnia:entry_archive_week' previous_week|date:'Y' previous_week|week_number %}" rel="archives">&laquo;
       {% blocktrans with year=previous_week|date:"Y" week_number=previous_week|week_number %}Week {{ week_number }} of {{ year }}{% endblocktrans %}
     </a>
   </li>
   {% endif %}
   {% if next_week %}
   <li class="next">
-    <a href="{% url 'zinnia:entry_archive_week' next_week|date:"Y" next_week|week_number %}" rel="archives">
+    <a href="{% url 'zinnia:entry_archive_week' next_week|date:'Y' next_week|week_number %}" rel="archives">
       {% blocktrans with year=next_week|date:"Y" week_number=next_week|week_number %}Week {{ week_number }} of {{ year }}{% endblocktrans %}
       &raquo;
     </a>
@@ -45,10 +45,10 @@
 <h3>{% trans "Archives" %}</h3>
 <ul class="pager align-left">
   <li>
-    <a href="{% url 'zinnia:entry_archive_year' week|date:"Y" %}" rel="archives">{{ week|date:"Y" }}</a>
+    <a href="{% url 'zinnia:entry_archive_year' week|date:'Y' %}" rel="archives">{{ week|date:"Y" }}</a>
   </li>
   <li>
-    <a href="{% url 'zinnia:entry_archive_month' week|date:"Y" week|date:"m" %}" rel="archives">{{ week|date:"YEAR_MONTH_FORMAT" }}</a>
+    <a href="{% url 'zinnia:entry_archive_month' week|date:'Y' week|date:'m' %}" rel="archives">{{ week|date:"YEAR_MONTH_FORMAT" }}</a>A
   </li>
 </ul>
 {% endblock content-related %}
