--- a/gccsite/users/templates/users/profile.html
+++ b/gccsite/users/templates/users/profile.html
@@ -40,32 +40,32 @@
       <ul class="fa-ul text-break-word profile-info" style="margin-bottom: 1em">
         {% if see_private %}
           {% if shown_user.get_full_name %}
-          <li title="{% trans "Full name" %}">
+          <li title="{% trans 'Full name' %}">
             <i class="fa fa-li fa-user"></i>
             <span class="text-capitalize">{{ shown_user.first_name }}</span>
             <span class="text-smallcaps">{{ shown_user.last_name }}</span>
           </li>
           {% endif %}
           {% if shown_user.phone %}
-          <li title="{% trans "Phone number" %}">
+          <li title="{% trans 'Phone number' %}">
             <i class="fa fa-li fa-phone"></i>
               <a href="tel:{{ shown_user.phone }}">{{ shown_user.phone|phone_number }}</a>
           </li>
           {% endif %}
           {% if shown_user.email %}
-          <li title="{% trans "Email address" %}">
+          <li title="{% trans 'Email address' %}">
             <i class="fa fa-li fa-envelope-o"></i>
             <a href="email:{{ shown_user.email }}">{{ shown_user.email }}</a>
           </li>
           {% endif %}
           {% if shown_user.birthday %}
-          <li title="{% trans "Birth day" %}"><i class="fa fa-li fa-birthday-cake"></i>
+          <li title="{% trans 'Birth day' %}"><i class="fa fa-li fa-birthday-cake"></i>
             {{ shown_user.birthday }}<br>
               <small class="text-muted">{{ shown_user.birthday|timesince }}</small>
           </li>
           {% endif %}
          {% if user.has_partial_address %}
-          <li title="{% trans "Postal address" %}">
+          <li title="{% trans 'Postal address' %}">
             <i class="fa fa-li fa-map-marker"></i>
             <address>
               {{ shown_user.address|linebreaksbr }}<br>
@@ -75,7 +75,7 @@
           </li>
           {% endif %}
         {% endif %}
-        <li title="{% trans "Date joined" %}">
+        <li title="{% trans 'Date joined' %}">
           <i class="fa fa-li fa-clock-o"></i>
           {% trans "Member for" %} {{ shown_user.date_joined|timesince }}
         </li>
@@ -85,7 +85,7 @@
 
     <div class="col-sm-8 col-md-5 compact-headings">
 
-      <h3>{% trans "Contest involvment" %}</h3>
+      <h3>{% trans 'Contest involvment' %}</h3>
 
       {% with shown_user.get_involved_contestants as user_contestants %}
 
