--- a/gccsite/users/templates/users/stub-search-result.html
+++ b/gccsite/users/templates/users/stub-search-result.html
@@ -7,12 +7,12 @@
   </div>
   <div class="col-xs-9 col-info">
     <div style="position: absolute; right: 0;">
-      <a href="{% url 'admin:users_prologinuser_change' user.pk %}" class="btn btn-info btn-xs" title="{% trans "Edit in admin" %}"><i class="fa fa-pencil"></i></a>
+      <a href="{% url 'admin:users_prologinuser_change' user.pk %}" class="btn btn-info btn-xs" title="{% trans 'Edit in admin' %}"><i class="fa fa-pencil"></i></a>
       {% test_rule 'users.can-impersonate' request.user user as can_impersonate %}
       {% if can_impersonate %}
       <form method="post" action="{% url 'users:impersonate' user.pk %}" style="display: inline">
         {% csrf_token %}
-        <button type="submit" class="btn btn-default btn-xs" title="{% trans "Impersonate" %}"><i class="fa fa-user-secret"></i></button>
+        <button type="submit" class="btn btn-default btn-xs" title="{% trans 'Impersonate' %}"><i class="fa fa-user-secret"></i></button>
       </form>
       {% endif %}
     </div>
