--- a/gccsite/gcc/templates/gcc/application/review.html
+++ b/gccsite/gcc/templates/gcc/application/review.html
@@ -19,13 +19,27 @@
       </h3>
 
       <p>
-        <a class="btn btn-success" href="{% url 'gcc:accept_all' event=event.pk %}">
-          {% blocktrans with nb_acceptables|pluralize as plural and nb_acceptables as nb_acceptables %}
-            Accept
-            <span class="acceptables-counter">{{ nb_acceptables }}</span>
-            candidate{{ plural }}
-          {% endblocktrans %}
-        </a>
+        {# Button to accept selected candidates #}
+        {% if nb_accepts >= 0 %}
+          <a class="btn btn-success" href="{% url 'gcc:accept_all' event=event.pk %}">
+            {% blocktrans with nb_accepts|pluralize as plural and nb_accepts as nb_accepts %}
+              Accept
+              <span class="acceptables-counter">{{ nb_accepts }}</span>
+              candidate{{ plural }}
+            {% endblocktrans %}
+          </a>
+        {% endif %}
+
+        {# Button to reject non-selected candidates #}
+        {% if nb_rejects >= 0 %}
+          <a class="btn btn-danger" href="{% url 'gcc:reject_all' event=event.pk %}">
+            {% blocktrans with nb_rejects|pluralize as plural and nb_rejects as nb_rejects %}
+              Reject
+              <span class="acceptables-counter">{{ nb_rejects }}</span>
+              candidate{{ plural }}
+            {% endblocktrans %}
+          </a>
+        {% endif %}
       </p>
 
       <h4>
