event add a is_long field and adapt review template

--- a/gccsite/gcc/templates/gcc/application/review_index.html
+++ b/gccsite/gcc/templates/gcc/application/review_index.html
@@ -29,7 +29,11 @@
       {% endwith %}
       {% for event in group.list|dictsort:'event_start' %}
         <tr>
-          <td>{% trans 'Long Summer Camp' %}</td>
+            {% if event.is_long %}
+            <td>{% trans 'Long Summer Camp' %}</td>
+            {% else %}
+            <td>{% trans 'Short Summer Camp' %}</td>
+            {% endif %}
           <td>{{ event.center.name }} <span class="text-muted">{{ event.event_start|date:"SHORT_DATE_FORMAT" }}</span></td>
           <td>
             {% has_perm 'gcc.can_review_event' request.user event as can_review %}
